# signalflowgrapher

./: .gitignore  DEVDOCU.md  LICENSE  MANUAL.md  README.md  pyproject.toml
examples/SC_analysis__schmid18/: README.md  fig_01.json  fig_02.json  fig_04.json  fig_08.json  fig_12.json
examples/tool_chain_example/: sfg.json  tool_chain_example.ipynb
requirements/: base.txt  sfg.yml  sfg_dev.yml
src/: requirements.txt  sfg_start.py
src/main/icons/resources/: onearrow.json
src/main/python/: main.py
src/main/python/signalflow_algorithms/algorithms/: graph.py  graph_operations.py  johnson.py  mason.py  tarjan.py
src/main/python/signalflow_algorithms/common/: utils.py
src/main/python/signalflowgrapher/: app.py  signalflowgrapher.pro
src/main/python/signalflowgrapher/commands/: create_branch_command.py  remove_branch_command.py
src/main/resources/base/: main_window.ui
src/signalflow_algorithms/algorithms/: find_paths.py  graph_operations.py  loop_group.py  mason.py
src/signalflow_algorithms/tests/algorithms/: test_find_paths.py  test_graph.py  test_graph_operations.py  test_mason.py
src/signalflowgrapher/: __main__.py  app.py  containers.py  signalflowgrapher.pro
src/signalflowgrapher/algorithms/: find_paths.py  graph.py  graph_operations.py  johnson.py  loop_group.py  mason.py  tarjan.py
src/signalflowgrapher/commands/: change_branch_weight_command.py  change_node_name_command.py  command_handler.py  create_branch_command.py  create_node_command.py  move_node_command.py  remove_branch_command.py  remove_node_command.py  transform_branch_command.py
src/signalflowgrapher/common/: json_dict.py  observable.py  utils.py
src/signalflowgrapher/controllers/: io_controller.py  main_controller.py  operation_controller.py
src/signalflowgrapher/gui/: branch_widget.py  fixed_grid_widget.py  geometry.py  graph_field.py  graph_item.py  grid.py  label_widget.py  main_window.py  mason_window.py  node_widget.py  side_widget.ui  sympy_expression_validator.py
src/signalflowgrapher/gui/conditional_actions/: conditional_action.py  selection_condition.py
src/signalflowgrapher/gui/ui/: main_window.ui  mason_window.ui  side_widget.ui
src/signalflowgrapher/io/: json.py  tikz.py
src/signalflowgrapher/model/: model.py
src/signalflowgrapher/resources/: logging.conf  schema.json  suffix.tex
src/signalflowgrapher/resources/translations/: de_CH.ts
src/signalflowgrapher/ressources/tikz/: prefix.tex  sfgstyle.tex
src/signalflowgrapher/tests/algorithms/: test_find_paths.py  test_graph.py  test_graph_operations.py  test_johnson.py  test_loop_group.py  test_mason.py
src/signalflowgrapher/tests/commands/: test_change_branch_weight_command.py  test_change_node_name_command.py  test_command_handler.py  test_create_branch_command.py  test_create_node_command.py  test_move_label_command.py  test_move_node_command.py  test_remove_branch_command.py  test_remove_node_command.py  test_transform_branch_command.py
src/signalflowgrapher/tests/common/: test_geometry.py
src/signalflowgrapher/tests/controllers/: test_io_controller.py  test_main_controller.py  test_operation_controller.py
src/signalflowgrapher/tests/model/: test_model.py
src/signalflowgrapher/tools/: deregister.py  register.py
src/signalflowgrapher/tools/linux/: README.md  register_sfg_association.sh
src/signalflowgrapher/tools/macos/: README.md  register_sfg_association.sh
src/signalflowgrapher/tools/windows/: README.md  register_sfg_association.ps1
src/signalflowgrapher/utils/: icon.py
src_orig/signalflow_algorithms/algorithms/: johnson.py
src_orig/signalflowgrapher/: app.py
src_orig/signalflowgrapher/commands/: create_node_command.py  move_label_command.py  remove_node_command.py
src_orig/signalflowgrapher/controllers/: main_controller.py
src_orig/signalflowgrapher/gui/: fixed_grid_widget.py  main_window.py
src_orig/signalflowgrapher/model/: model.py
src_orig/signalflowgrapher/tests/commands/: test_create_node_command.py
tools/: title_image.xcf
tools/windows/: README.md
(+46 files in other folders)
