[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "signalflowgrapher"
version = "2.1.0"
description = "Signal-Flow-Graph Editor"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "attrs",
    "jsonschema",
    "pyrsistent",
    "PySide6",
    "sympy",
    "dependency-injector",
]

[project.scripts]
signalflowgrapher = "signalflowgrapher.__main__:main"

[tool.setuptools.packages.find]
where = ["src/main/python"]

[tool.setuptools.package-data]

# Font, LaTeX templates, JSON schema,
# and logging config used at runtime via importlib.resources
"signalflowgrapher.resources" = [
    "*.ttf",        # HeptaSlab-Regular.ttf
    "*.tex",        # prefix.tex, suffix.tex, sfgstyle.tex
    "*.json",       # schema.json
    "*.conf",       # logging.conf
]
"signalflowgrapher.resources.translations" = [
    "*.qm",
]
"signalflowgrapher.gui.ui" = [
    "*.ui",
]
